msg:整理文件，删除激活账号多余文件

--- a/Mooc_TestProject/.gitignore
+++ b/Mooc_TestProject/.gitignore
@@ -1,5 +1,7 @@
 .idea
 /case/_trial_temp
+/case/_trial_temp-1
+/case/_trial_temp-1.lock
 /case/_trial_temp.lock
 /case/__pycache__
 /handle/__pycache__
